# grid

./: .gitignore  README.md  flake.nix  pyproject.toml
grid/: graphics.py  model.py
local/: README.md
source/grid/: __main__.py  graphics.py  model.py  try_cassowary.py
source/grid/try_cassowary/: try_cassowary.py  try_kiwisolver.py
tests/model/: test_cell.py  test_get_grid_section.py  test_tile.py  test_types.py
tests/model/test_shared_borders/: test_get_cross_cell.py
tests/model/tile/: test_free.py  test_get_uninterrupdet_vertical_right_border.py  test_intersection.py  test_un_occupy.py
tests/model/tile/as_corners/: test_normalize.py
tests/model/tile/as_step/: test_as_corners.py
tests/model/tile_grid/: test_align_below_tile_left_border_to_left.py  test_align_below_tile_right_border.py  test_align_below_tile_right_border_to_right.py  test_get_longest_left_border.py  test_get_longest_vertical_right_border.py  test_get_shared_borders_near.py  test_get_shortest_left_border.py  test_get_shortest_vertical_right_border.py  test_snap_2_borders.py  test_snap_2_edges.py
