[project]
name = "grid"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "borisoid", email = "boris.lazarev01@gmail.com"},
    {name = "borisoid", email = "boris.lazarev90@mail.ru"},
]

requires-python = "==3.12.*"
dependencies = [
    "pygame>=2.5.2",
    "cassowary>=0.5.2",
    "kiwisolver>=1.4.5",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python -m source.grid"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.1.1",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pyright>=1.1.362",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
exclude = [
    "**/__pycache__",
]
strict = ["*"]
reportWildcardImportFromLibrary = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportShadowedImports = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportTypeCommentUsage = "error"
reportMatchNotExhaustive = "error"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
pretty = true
show_error_codes = true
exclude = [
    "^local/.",
]

[tool.isort]
profile = "black"
lines_after_imports = 2
# line_length = 100
group_by_package = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88  # default
# line-length = 100
target-version = ['py312']
