[project]
name = "grid"
version = "0.1.0"
description = "Grid"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "borisoid", email = "boris.lazarev01@gmail.com"},
    {name = "borisoid", email = "boris.lazarev90@mail.ru"},
]

requires-python = ">=3.13"
dependencies = [
    "pygame>=2.5.2",
    "kiwisolver>=1.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "mypy>=1.8.0",
    "pyright>=1.1.362",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
strict = ["*"]
reportWildcardImportFromLibrary = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportShadowedImports = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportTypeCommentUsage = "error"
reportMatchNotExhaustive = "error"
reportUnusedImport = "error"
reportUnknownVariableType = "error"
exclude = [
    "**/__pycache__",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
pretty = true
show_error_codes = true
implicit_reexport = false
warn_redundant_casts = true
# warn_unused_ignores = true
warn_return_any = true
exclude = [
    "^local/.",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
